# Citation-Aware-RAG

./: README.md
Citation-Aware RAG/rag-citation-app/: .gitignore  pyproject.toml  requirements.txt
Citation-Aware RAG/rag-citation-app/data/chroma_db/bcbc34f6-5633-44dc-a4d0-b4e34863fd11/: index_metadata.pickle
Citation-Aware RAG/rag-citation-app/docker/: Dockerfile.app  docker-compose.yml
Citation-Aware RAG/rag-citation-app/src/core/: config.py  types.py
Citation-Aware RAG/rag-citation-app/src/evaluation/: run_eval.py
Citation-Aware RAG/rag-citation-app/src/ingestion/: loader.py  pipeline.py  reingest.py  splitter.py
Citation-Aware RAG/rag-citation-app/src/retrieval/: engine.py  modifiers.py
Citation-Aware RAG/rag-citation-app/src/storage/: vector_store.py
Citation-Aware RAG/rag-citation-app/src/ui/: app.py
Citation-Aware RAG/rag-citation-app/tests/: golden_dataset.py  rag_custom_evaluation_report.csv  rag_evaluation_report.csv  test_loader.py
