[tool.poetry]
name = "rag-citation-app"
version = "0.1.0"
description = "Professional RAG with Citation Awareness and Docker Support"
authors = ["Anusara Uden <your_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.16"
langchain-community = "^0.0.33"
langchain-experimental = "^0.0.57"
# PyMuPDF is strictly required for metadata extraction [cite: 491, 492]
pymupdf = "^1.24.1"
chromadb = "^0.4.24"
# Pydantic is crucial for data contracts (garbage in, garbage out protection)
pydantic = "^2.6.4"
# Streamlit for the UI Phase [cite: 582]
streamlit = "^1.32.0"
tiktoken = "^0.6.0"
sentence-transformers = "^5.1.2"
rank-bm25 = "^0.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.3.0"  # Enforce code style
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"